--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "C_Cpp.errorSquiggles": "disabled",
   "files.associations": {
     "iostream": "cpp"
-  }
+  },
+  "C_Cpp_Runner.msvcBatchPath": ""
 }
